--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ Click==7.0
 Flask==1.1.1
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.0
+gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
+psycopg2-binary==2.8.3
 SQLAlchemy==1.3.5
 Werkzeug==0.15.4
