--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 alembic==1.0.11
 Click==7.0
+croniter==0.3.30
 Flask==1.1.1
 Flask-Migrate==2.5.2
 Flask-Script==2.0.6
@@ -12,6 +13,9 @@ MarkupSafe==1.1.1
 psycopg2-binary==2.8.3
 python-dateutil==2.8.0
 python-editor==1.0.4
+redis==3.3.5
+rq==1.1.0
+rq-scheduler==0.9
 six==1.12.0
 SQLAlchemy==1.3.5
 Werkzeug==0.15.4
