--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 alembic==1.0.11
+Babel==2.7.0
 Click==7.0
 croniter==0.3.30
 Flask==1.1.1
+Flask-Babel==0.12.2
 Flask-Migrate==2.5.2
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.0
@@ -13,6 +15,7 @@ MarkupSafe==1.1.1
 psycopg2-binary==2.8.3
 python-dateutil==2.8.0
 python-editor==1.0.4
+pytz==2019.2
 redis==3.3.5
 rq==1.1.0
 rq-scheduler==0.9
